fix: fix distorting image placeholder

--- a/section1.css
+++ b/section1.css
@@ -65,6 +65,6 @@ body {
     align-items: center;
     background: darkgray;
     box-sizing: border-box;
-    height: 30vh;
-    width: 25vw;
+    height: 288px;
+    width: 480px;
   }
